--- a/views/blogpage.ejs
+++ b/views/blogpage.ejs
@@ -97,6 +97,15 @@
                     </form>
                 <% } %>
                 <button class="button-cancel">CANCEL</button>
+                <button type="submit" class="button-post-img">
+                    <img src="images/image.png" alt="Image Icon">
+                </button>
+                <button type="submit" class="button-post-video">
+                    <img src="images/video.png" alt="Video Icon">
+                </button>
+                <button type="submit" class="button-post-audio">
+                    <img src="images/audio.png" alt="Audio Icon">
+                </button>
             </div>
             <!--Blog Entries-->
             <div class="blog-entries">
