--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -82,7 +82,7 @@
                     <br>
 
                     NPM LIBRARIES USED: <br>
-                    body-parser, ejs, express.js, mysql, nodemon 
+                    body-parser, ejs, express.js, mysql, nodemon, bcrypt, multer, dotenv, express-session
                 </p>
             </div>
         </div>
