--- a/views/aboutus.ejs
+++ b/views/aboutus.ejs
@@ -35,7 +35,7 @@
                     <img src="images/julia-icon.png" alt="team member image">
                 </div>
                 <h3>Julia Dalipe</h3>
-                <p class="role">Webpage Designer</p>
+                <p class="role">Webpage Developer</p>
                 <p> Hey! My name is Julia Dalipe, currently taking B.S. in Information Systems in DLSU. <br>
                     Some of my hobbies are editing, playing online games and watching movies & anime. <br>
                     My favorite feature about blogs is that everyone can express themselves freely.
@@ -46,17 +46,17 @@
                     <img src="images/anton-icon.png" alt="team member image">
                 </div>
                 <h3>Anton de Leon</h3>
-                <p class="role">Webpage Designer</p>
+                <p class="role">Webpage Developer</p>
                 <p> Hello! My name is Gabriel Anton de Leon, currently taking B.S. Information Technology in DLSU. <br>
                     I like playing video games, some of my favorites are Valorant, Minecraft, and Teamfight Tactics. <br>
-                    With Enter-act, I hope to create a fun and hassle-free environment where people can share their thoughts and experiences with their friends and family.</p>
+                    With Enter-Act, I hope to create a fun and hassle-free environment where people can share their thoughts and experiences with their friends and family.</p>
             </div>
             <div class="team-member">
                 <div class="team-img">
                     <img src="images/reece-icon.png" alt="team member image">
                 </div>
                 <h3>Reece de Padua</h3>
-                <p class="role">Webpage Designer</p>
+                <p class="role">Webpage Developer</p>
                 <p> Hi my name is Reece de Padua, currently taking B.S. Information Technology in DLSU. <br>
                     I enjoy watching series such as Umbrella Academy, Stranger Things, Friends and more. I also play Valorant and my favorite agent is Chamber. <br>
                     With Enter-Act, I hope to see users getting to enjoy and appreciate our micro blog app!</p>
