--- a/views/header.ejs
+++ b/views/header.ejs
@@ -34,6 +34,7 @@
                         <li><a href="enteract.ejs" target="_blank">Homepage</a></li>
                         <li><a href="aboutus.ejs" target="_blank">About Us</a></li>
                         <li><a href="signup.ejs">Get Started</a></li>
+                        <li><a href="viewblogpage.ejs">Newsfeed</a></li>
                     <a class="dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Contact Us
                     </a>
