--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -45,9 +45,9 @@
                 <span><%= errorMessage %></span>
                 <div class="signup-alternative">
                     <span>Sign In With:</span>
-                    <img src="images/facebook_icon.png" title="Facebook">
-                    <img src="images/google_icon.png" title="Google">
-                    <img src="images/twitter_icon.png" title="Twitter">
+                    <img src="images/facebook_icon.png" title="Facebook" onclick="window.open('//www.facebook.com/login', '_blank');">
+                    <img src="images/google_icon.png" title="Google" onclick="window.open('//accounts.google.com/v3/signin/identifier?dsh=S-1224398698%3A1670682535425469&authuser=0&continue=https%3A%2F%2Fmyaccount.google.com%2F&ec=GAlAwAE&hl=en&service=accountsettings&flowName=GlifWebSignIn&flowEntry=AddSession', '_blank');">
+                    <img src="images/twitter_icon.png" title="Twitter" onclick="window.open('//twitter.com/login', '_blank');">
                 </div>
             </div>
         </div>
